@@ -131,6 +131,7 @@ sub relocale {
 	my $self = shift;
 	foreach my $i ( 0 .. $self->GetPageCount - 1 ) {
 		$self->SetPageText( $i, $self->GetPage($i)->gettext_label );
+		$self->GetPage($i)->relocale;
 	}
 
 	return;
